--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     -->
   <!-- Blog entry -->
     <div class="w3-card-4 w3-margin w3-white">
-    <img src="_images/imperial_small.jpg" alt="airline" style="width:5%">
+    <img src="/_images/imperial_small.jpg" alt="airline" style="width:5%">
     <div class="w3-container">
       <h3><b>Scribble</b></h3>
       <h4 id="D3">Day 3, <span class="w3-opacity">2 March 2022</span></h4>
