--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Explorating the theme of under-mapped places">
 	<meta name="keywords" content="mapping, training">
 	<meta name="author" content="Nummo">
-	<meta property="og:image" content="_images/imperial_small.jpg">
+	<meta property="og:image" content="imperial_small.jpg">
 	<meta property="og:image:type" content="image/png">
 	<meta property="og:image:width" content="436">
 	<meta property="og:image:height" content="228">
@@ -35,7 +35,7 @@
 <div class="w3-col l8 s12">
   <!-- Blog entry
     <div class="w3-card-4 w3-margin w3-white">
-    <img src="_images/imperial_small.jpg" alt="airline" style="width:5%">
+    <img src="imperial_small.jpg" alt="airline" style="width:5%">
     <div class="w3-container">
       <h3><b>Scribble</b></h3>
       <h4 id="D5">Day 5, <span class="w3-opacity">4 March 2022</span></h4>
@@ -57,7 +57,7 @@
   <!-- Blog entry
 
     <div class="w3-card-4 w3-margin w3-white">
-    <img src="_images/imperial_small.jpg" alt="airline" style="width:5%">
+    <img src="imperial_small.jpg" alt="airline" style="width:5%">
     <div class="w3-container">
       <h3><b>Scribble</b></h3>
       <h4 id="D4">Day 4, <span class="w3-opacity">3 March 2022</span></h4>
@@ -78,7 +78,7 @@
     -->
   <!-- Blog entry -->
     <div class="w3-card-4 w3-margin w3-white">
-    <img src="/_images/imperial_small.jpg" alt="airline" style="width:5%">
+    <img src="imperial_small.jpg" alt="airline" style="width:5%">
     <div class="w3-container">
       <h3><b>Scribble</b></h3>
       <h4 id="D3">Day 3, <span class="w3-opacity">2 March 2022</span></h4>
@@ -102,7 +102,7 @@
 
   <!-- Blog entry -->
   <div class="w3-card-4 w3-margin w3-white">
-    <img src="_images/imperial_small.jpg" alt="airline" style="width:5%">
+    <img src="imperial_small.jpg" alt="airline" style="width:5%">
     <div class="w3-container">
       <h3><b>Scribble</b></h3>
       <h4 id="D2">Day 2, <span class="w3-opacity">1 March 2022</span></h4>
@@ -139,7 +139,7 @@
 
   <!-- Blog entry -->
   <div class="w3-card-4 w3-margin w3-white">
-    <img src="_images/imperial_small.jpg" alt="airline" style="width:5%">
+    <img src="imperial_small.jpg" alt="airline" style="width:5%">
     <div class="w3-container">
       <h3><b>Scribble</b></h3>
       <h4 id="D1">Day 1, <span class="w3-opacity">28 February 2022</span></h4>
@@ -168,7 +168,7 @@
 
    <!-- Blog entry -->
   <div class="w3-card-4 w3-margin w3-white">
-  <img src="_images/imperial_small.jpg" alt="routes of imperial airways" style="width:5%">
+  <img src="imperial_small.jpg" alt="routes of imperial airways" style="width:5%">
     <div class="w3-container">
       <h3><b>Scribble</b></h3>
       <h4 id="D0">Day 0, <span class="w3-opacity">28 February 2022</span></h4>
@@ -206,7 +206,7 @@
 <div class="w3-col l4">
   <!-- About Card -->
   <div class="w3-card w3-margin w3-margin-top">
-  <img src="_images/imperial_small.jpg" style="width:100%">
+  <img src="imperial_small.jpg" style="width:100%">
     <div class="w3-container w3-white">
       <h4><b>Nenna</b></h4>
       <p>Scribbles, jottings and plottings by Nenna (<a href="https://www.ucl.ac.uk/information-studies/nenna-orie-chuku" target="_blank">UCL DIS PhD Candidate </a>) - a participant of the Under-Mapped Spaces 2022 workshop.</p>
@@ -221,23 +221,23 @@
     </div>
     <ul class="w3-ul w3-hoverable w3-white">
       <li class="w3-padding-16">
-        <img src="_images/imperial_small.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+        <img src="imperial_small.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
         <span class="w3-large"><a href="#D0">Scribble, Day 0</a></span><br>
         <span>Prep</span>
       </li>
       <li class="w3-padding-16">
-        <img src="_images/imperial_small.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+        <img src="imperial_small.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
         <span class="w3-large"> <a href="#D1">Scribble, Day 1</a></span><br>
         <span>Set up</span>
       </li>
       <li class="w3-padding-16">
-        <img src="_images/imperial_small.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+        <img src="imperial_small.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
         <span class="w3-large"> <a href="#D2">Scribble, Day 2</a></span><br>
         <span>Document your documents</span>
         <span></span>
       </li>
       <li class="w3-padding-16">
-        <img src="_images/imperial_small.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+        <img src="imperial_small.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
         <span class="w3-large"> <a href="#D3">Scribble, Day 3</a></span><br>
         <span>Teaching Moment</span>
         <span></span>
