--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
     <div class="w3-container">
       <h5>Map Selection</h5>
-      <img src="_images/8717000.jpg" align="center" alt="Imperial Airways Ltd. by Laszlo Moholy-Nagy (1937)" style="width:50%"> <!--the center is not working -->
+      <img src="8717000.jpg" align="center" alt="Imperial Airways Ltd. by Laszlo Moholy-Nagy (1937)" style="width:50%"> <!--the center is not working -->
       <p>Map selected: Imperial Airways Ltd. by  Laszlo Moholy-Nagy (1937) (Source <a href="https://www.davidrumsey.com/luna/servlet/detail/RUMSEY~8~1~267441~90041892:Imperial-Airways-Map-of-Empire-&-Eu?qvq=q:%3D%22Imperial%20Airways%20Ltd.%22;lc:RUMSEY~8~1&mi=1&trs=6" target="_blank"> David Ramsey Map Collection</a>) but had some reservations over it so looked at others for a backup:
       	<ul>
       		<li>Imperial Airways [Map of The World]. IA/P/191 20m 5/37 (1937) by James Gardner. Source:<a href="https://www.davidrumsey.com/luna/servlet/detail/RUMSEY~8~1~268350~90042630:Imperial-Airways--Map-of-The-World-" target="_blank"> David Ramsey Map Collection</a></li>
