--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p>Scribbles - Jottings - Plottings</span></p>
   </header>
 <!-- this button function does not work so need to review links to js and css files-->
-<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+<!--<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>-->
 <!-- Grid -->
 <div class="w3-row">
 	<p>Note: these entries are in note form so if you spot spelling or grammatical errors, this reflects the scribble nature of it. When possible, I will tidy things up.</p>
