--- a/teaching-artefact.html
+++ b/teaching-artefact.html
@@ -58,6 +58,10 @@
 			<li><a href="http://www.naturalearthdata.com/downloads/10m-cultural-vectors/" target="_blank">www.naturalearthdata.com/downloads/10m-cultural-vectors/</a></li>
 			<li><a href="http://www.diva-gis.org/Data" target="_blank">www.diva-gis.org/Data</a></li>
 				<li><a href="https://www.igismap.com/download-world-shapefile-free-country-borders-continents/" target="_blank">www.igismap.com/download-world-shapefile-free-country-borders-continents/</a></li>
+	<h4>Alternative approach and/or extensions</h4>
+	<ul>
+		<li>Going local - same principles but thinking about the local be it the country or city/town.</li>
+	</ul>
 	</div>
 <!-- Footer -->
 	<footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
