--- a/teaching-artefact.html
+++ b/teaching-artefact.html
@@ -24,52 +24,54 @@
 	<ul>
 		<li>Create your Fadeout to Blackout criteria</li>
 		<li>Sketch out your Open World Map: using a Mercator projection map/ sketch of the world using a three- tone key. </li>
-		<li>By pencil, pen (question: what boundaries to consider: <a hred="http://www.naturalearthdata.com/downloads/10m-cultural-vectors/" target="_blank"> http://www.naturalearthdata.com/downloads/10m-cultural-vectors/</a>?)
-			<ul>Free-shading  - using a pencil or black pen - free shade out all of your No places<ul>
-			<ul>Cross-hatching shading </ul>
-			<ul> Nothing (white) - leave blank/untouched parts of the world that does moveable to</ul>
-		</li>
-		<li>QGIS - similar question to by pencil, pen route: http://www.naturalearthdata.com/downloads/10m-cultural-vectors/
-			<ul>Locate the 'No' country layer in the 'Layers' panel. Right-click on the selected country layer > Style > click on the black colour (triangle point on the left side of the triangle)</ul>
-			<ul>Locate the 'Maybe' country level in the 'Layers' panel. Right-click on the selected country layer> Style > pick a colour (not black or white)</ul>
+		<ul>By pencil, pen (question: what boundaries to consider: <a href="http://www.naturalearthdata.com/downloads/10m-cultural-vectors/" target="_blank">www.naturalearthdata.com/downloads/10m-cultural-vectors/</a>?)
+			<li>Free-shading - using a pencil or black pen - free shade out all of your No places<li>
+			<li>Cross-hatching shading </li>
+			<li>Nothing (white) - leave blank/untouched parts of the world that does moveable to</li>
+		</ul>
+		<ul>QGIS - similar question to by pencil, pen route: http://www.naturalearthdata.com/downloads/10m-cultural-vectors/
+			<li>Locate the 'No' country layer in the 'Layers' panel. Right-click on the selected country layer > Style > click on the black colour (triangle point on the left side of the triangle)</li>
+			<li>Locate the 'Maybe' country level in the 'Layers' panel. Right-click on the selected country layer> Style > pick a colour (not black or white)</li>
 		</li>
 	</ul>
 </ul>
-	<h4>Creating a <em>Fadeout to Blackout</em> criteria</h4>
-	<p>The 'No'</p>
-	<p>Your 'No' criteria is be based on what you feel is important. As critical theory is central to this discussion, you may wish to consider intersectional factors. If you wish to adopt an information system based approach, you may wish to consider how visa-free the world is to you and others who you know (family, friend, community).
-	</p>
-	<p>A layered openness</p>
-	<p>Positioning is a key element of this activity. To thing of ourselves as multi-selves to (in effect) create a character profile. However, not all positions can be comfortably expressed and shared, so with this there are a couple of caveats. Positioning yourself in the 'Open World Map' can come in different ways. One obvious way is to place yourself as centre. Another is to place someone you know as the centre (no government names or real names please). Another is to take a person from the past, a historic figure. Or a fictional character that can be situated within a Mercator projection map. In summary, there are degrees of openness and if you feel that this space is not appropriate for a certain part of yourself - keep and stay firm with that boundary.</p>
-	<h4>Duration of session</h4>
-	<h4>Dialogue points</h4>
-	<h4>Signposts and Resources</h4>
-		<p>An idea of an 'Open World Map' could use the concept of visa-free travel:
-			<ul>
-				<li>Consider the passport(s) you hold</li>
-				<li>Passport(s) members of your family have</li>
-				<li>Passport(s) your friends have</li>
-			</ul>
-		Passport Index is a website which provides details about visa based on passport held/using:	<a href="https://www.passportindex.org/comparebyPassport.php
-		" target="_blank"> https://www.passportindex.org/comparebyPassport.php </a>
-		</p>
-	<h4>Data Sources</h4>
-	<p>Country layers - open sourced and available via:</p>
+<h4>Creating a <em>Fadeout to Blackout</em> criteria</h4>
+<p>The 'No'</p>
+<p>Your 'No' criteria is be based on what you feel is important. As critical theory is central to this discussion, you may wish to consider intersectional factors. If you wish to adopt an information system based approach, you may wish to consider how visa-free the world is to you and others who you know (family, friend, community).
+</p>
+<p>A layered openness</p>
+<p>Positioning is a key element of this activity. To thing of ourselves as multi-selves to (in effect) create a character profile. However, not all positions can be comfortably expressed and shared, so with this there are a couple of caveats. Positioning yourself in the 'Open World Map' can come in different ways. One obvious way is to place yourself as centre. Another is to place someone you know as the centre (no government names or real names please). Another is to take a person from the past, a historic figure. Or a fictional character that can be situated within a Mercator projection map. In summary, there are degrees of openness and if you feel that this space is not appropriate for a certain part of yourself - keep and stay firm with that boundary.</p>
+<h4>Duration of session</h4>
+<h4>Dialogue points</h4>
+<h4>Signposts and Resources</h4>
+	<p>An idea of an 'Open World Map' could use the concept of visa-free travel:</p>
 		<ul>
-			<li><a href="http://www.naturalearthdata.com/downloads/10m-cultural-vectors/" target="_blank">www.naturalearthdata.com/downloads/10m-cultural-vectors/</a></li>
-			<li><a href="http://www.diva-gis.org/Data" target="_blank">www.diva-gis.org/Data</a></li>
-				<li><a href="https://www.igismap.com/download-world-shapefile-free-country-borders-continents/" target="_blank">www.igismap.com/download-world-shapefile-free-country-borders-continents/</a></li>
-	<h4>Alternative approach and/or extensions</h4>
+			<li>Consider the passport(s) you hold</li>
+			<li>Passport(s) members of your family have</li>
+			<li>Passport(s) your friends have</li>
+		</ul>
+	<p>Passport Index is a website which provides details about visa based on passport held/using:	<a href="https://www.passportindex.org/comparebyPassport.php
+	" target="_blank"> https://www.passportindex.org/comparebyPassport.php </a></p>
+<h4>Data Sources</h4>
+<p>Country layers - open sourced and available via:</p>
 	<ul>
-		<li>Going local - same principles but thinking about the local be it the country or city/town.</li>
-	</ul>
+		<li><a href="http://www.naturalearthdata.com/downloads/10m-cultural-vectors/" target="_blank">www.naturalearthdata.com/downloads/10m-cultural-vectors/</a></li>
+		<li><a href="http://www.diva-gis.org/Data" target="_blank">www.diva-gis.org/Data</a></li>
+			<li><a href="https://www.igismap.com/download-world-shapefile-free-country-borders-continents/" target="_blank">www.igismap.com/download-world-shapefile-free-country-borders-continents/</a></li>
+		</ul>
+<h4>Alternative approach and/or extensions</h4>
+<ul>
+	<li>Going local - same principles but thinking about the local be it the country or city/town.</li>
+</ul>
 	</div>
 <!-- Footer -->
 	<footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
+		<font size="1">
 		<p>Notes and work from <a href="https://stanfordgeospatialcenter.github.io/undermapped-spaces-2022/" target="_blank">Under-Mapped Spaces: New Methods and Tools for Critical Storytelling</a>, Stanford University. Under-Mapped Spaces 2022 was made possible by generous support from the McCoy Family Foundation, Stanford Libraries, the Stanford Office of the Provost, and Stanford University History Department.</p>
 	  <p>Copyright © 2022 Nenna Orie Chuku</p>
 	  <p>Cookies are used on this website to provide a better user experience. If you would like to disable all cookies on this site and other sites, the most effective way to do this is by disabling all coookies through your browser. To do this, we suggest using the Help section of your selected browser and following the guide available there. </p>
 	</p>
+</font>
 	</footer>
 </body>
 </html>
