--- a/teaching-artefact.html
+++ b/teaching-artefact.html
@@ -68,7 +68,7 @@
 	<footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
 		<font size="1">
 		<p>Notes and work from <a href="https://stanfordgeospatialcenter.github.io/undermapped-spaces-2022/" target="_blank">Under-Mapped Spaces: New Methods and Tools for Critical Storytelling</a>, Stanford University. Under-Mapped Spaces 2022 was made possible by generous support from the McCoy Family Foundation, Stanford Libraries, the Stanford Office of the Provost, and Stanford University History Department.</p>
-	  <p>Copyright © 2022 Nenna Orie Chuku</p>
+	  <p>Copyright © 2022 Nenna Orie Chuku. <a href="https://nummo.github.io/ums/">Part of Scribbles from Under-Mapped Places</a></p>
 	  <p>Cookies are used on this website to provide a better user experience. If you would like to disable all cookies on this site and other sites, the most effective way to do this is by disabling all coookies through your browser. To do this, we suggest using the Help section of your selected browser and following the guide available there. </p>
 	</p>
 </font>
