--- a/teaching-artefact.html
+++ b/teaching-artefact.html
@@ -17,33 +17,38 @@
 	<div class="main">
 	<h1>Teaching Artefact</h1>
 	<p> Nenna Orie Chuku </p>
-	<h2>Idea</h2>
-	<h3>Fadeouts to Blackouts - how open is the world to you?</h3>
+	<h2>Idea: <b>Fadeouts to Blackouts - how open is the world to you?</b></h2>
 	<p>Sitting in higher education institutions in the UK in dialogues about mobility and mobilities can produce an assumption that by dint of sharing this space, similar approaches and access to national and international movement is shared. This teaching artefact opens a dialogue on the idea of an open world and the openness of the world. The use of maps can present the world, a country, a localised place as open and expansive, yet there are a lot physical and metaphysical boundaries and barriers. These boundaries and barriers are what we will be using to create our own 'Open World Map'.</p>
-	<h4>Activity</h4>
+	<h4>Activities</h4>
 	<ul>
-		<li>Create your Fadeout to Blackout criteria</li>
-		<li>Sketch out your Open World Map: using a Mercator projection map/ sketch of the world using a three- tone key. </li>
-		<ul>By pencil, pen (question: what boundaries to consider: <a href="http://www.naturalearthdata.com/downloads/10m-cultural-vectors/" target="_blank">www.naturalearthdata.com/downloads/10m-cultural-vectors/</a>?)
-			<li>Free-shading - using a pencil or black pen - free shade out all of your No places<li>
-			<li>Cross-hatching shading </li>
-			<li>Nothing (white) - leave blank/untouched parts of the world that does moveable to</li>
-		</ul>
-		<ul>QGIS - similar question to by pencil, pen route: http://www.naturalearthdata.com/downloads/10m-cultural-vectors/
-			<li>Locate the 'No' country layer in the 'Layers' panel. Right-click on the selected country layer > Style > click on the black colour (triangle point on the left side of the triangle)</li>
+		<li>Create your <a href="#FOB">Fadeout to Blackout</a> criteria</li>
+		<li>Sketch out your Open World Map: using a Mercator projection map/ sketch of the world using a three- tone key.</li>
+	</ul>
+	<p>Sketching your Open World Map</p>
+		<p>By pencil, pen <em>(question: what boundaries to consider: <a href="http://www.naturalearthdata.com/downloads/10m-cultural-vectors/" target="_blank">www.naturalearthdata.com/downloads/10m-cultural-vectors/</a>?)</em></p>
+			<ul>
+				<li>Free-shading - using a pencil or black pen - free shade out all of your No places</li>
+				<li>Cross-hatching shading</li>
+				<li>Nothing (white) - leave blank/untouched parts of the world that does moveable to</li>
+			</ul>
+	<p><em>(this entry is an idea)</em> QGIS - similar question to by pencil, pen route: <a href="http://www.naturalearthdata.com/downloads/10m-cultural-vectors/" target="_blank">http://www.naturalearthdata.com/downloads/10m-cultural-vectors/</a></p>
+				<ul>
+					<li>Locate the 'No' country layer in the 'Layers' panel. Right-click on the selected country layer > Style > click on the black colour (triangle point on the left side of the triangle)</li>
 			<li>Locate the 'Maybe' country level in the 'Layers' panel. Right-click on the selected country layer> Style > pick a colour (not black or white)</li>
 		</li>
 	</ul>
 </ul>
-<h4>Creating a <em>Fadeout to Blackout</em> criteria</h4>
-<p>The 'No'</p>
+<h4 id="#FOB">Creating a <em>Fadeout to Blackout</em> criteria</h4>
+<p><u>The 'No'</u></p>
 <p>Your 'No' criteria is be based on what you feel is important. As critical theory is central to this discussion, you may wish to consider intersectional factors. If you wish to adopt an information system based approach, you may wish to consider how visa-free the world is to you and others who you know (family, friend, community).
 </p>
-<p>A layered openness</p>
+<p><u>A layered openness</u></p>
 <p>Positioning is a key element of this activity. To thing of ourselves as multi-selves to (in effect) create a character profile. However, not all positions can be comfortably expressed and shared, so with this there are a couple of caveats. Positioning yourself in the 'Open World Map' can come in different ways. One obvious way is to place yourself as centre. Another is to place someone you know as the centre (no government names or real names please). Another is to take a person from the past, a historic figure. Or a fictional character that can be situated within a Mercator projection map. In summary, there are degrees of openness and if you feel that this space is not appropriate for a certain part of yourself - keep and stay firm with that boundary.</p>
 <h4>Duration of session</h4>
+	<p><em>to consider and to add to</em></p>
 <h4>Dialogue points</h4>
-<h4>Signposts and Resources</h4>
+	<p><em>to consider and to add to</em></p>
+<h4>One approach...</h4>
 	<p>An idea of an 'Open World Map' could use the concept of visa-free travel:</p>
 		<ul>
 			<li>Consider the passport(s) you hold</li>
@@ -52,7 +57,7 @@
 		</ul>
 	<p>Passport Index is a website which provides details about visa based on passport held/using:	<a href="https://www.passportindex.org/comparebyPassport.php
 	" target="_blank"> https://www.passportindex.org/comparebyPassport.php </a></p>
-<h4>Data Sources</h4>
+<h4>Resources and Data Sources</h4>
 <p>Country layers - open sourced and available via:</p>
 	<ul>
 		<li><a href="http://www.naturalearthdata.com/downloads/10m-cultural-vectors/" target="_blank">www.naturalearthdata.com/downloads/10m-cultural-vectors/</a></li>
@@ -60,9 +65,10 @@
 			<li><a href="https://www.igismap.com/download-world-shapefile-free-country-borders-continents/" target="_blank">www.igismap.com/download-world-shapefile-free-country-borders-continents/</a></li>
 		</ul>
 <h4>Alternative approach and/or extensions</h4>
-<ul>
-	<li>Going local - same principles but thinking about the local be it the country or city/town.</li>
-</ul>
+	<p>to consider and add to</p>
+	<ul>
+		<li>Going local - same principles but thinking about the local be it the country or city/town.</li>
+	</ul>
 	</div>
 <!-- Footer -->
 	<footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
