--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Explorating the theme of under-mapped places">
+	<meta name="description" content="Exploring the theme of under-mapped places">
 	<meta name="keywords" content="mapping, training">
 	<meta name="author" content="Nummo">
 	<meta property="og:image" content="imperial_small.jpg">
@@ -85,10 +85,10 @@
     <div class="w3-container">
       <h5>Teaching Moment</h5>
       <p>An individual output for the workshop is the creation of a teaching artefact. Through this the goal is to connect skill development for researchers with educators. The approach and intro for developing  teaching artefacts is here <a href="https://stanfordgeospatialcenter.github.io/undermapped-spaces-2022/teaching-artifacts.html" target="_blank"> Teaching Artifacts</a>. I have started to draft a teaching artefact based on thinking about how 'open' the world is for us <a href="teaching-artefact.html" target="_blank">Teaching Artefact</a></p>
-			<h5>Tableu</h5>
+			<h5>Tableau</h5>
 			<p>What visualisation actually works for the data, intended narrative or dialogue?</p>
 			<h5>Leaflet</h5>
-        <p>Never thought about using Leaflet outside of php, sql framework but it looks like it is a quick way to test things before commiting to a relational database.</p>
+        <p>Never thought about using Leaflet outside of php, sql framework but it looks like it is a quick way to test things before committing to a relational database.</p>
 			<div class="w3-row">
         <div class="w3-col m8 s12">
         </div>
@@ -146,7 +146,7 @@
 
     <div class="w3-container">
       <h5>To open access or not?</h5>
-      <p>Alteratives to explore <a href="https://neatline.org/" target="_blank">neatline</a></p>
+      <p>Alternatives to explore <a href="https://neatline.org/" target="_blank">neatline</a></p>
       <h5>Set up, continued</h5>
       <p>For reasons I can no longer remember I don't have all the apps on my device anymore. So setting up QGIS - a newer version. The apps I used to use for OSM look like they no longer exist in the same format. Or maybe it is because I am using a PC this time and not a Mac...Anyway, I have a set up.</p>
       <h5>Plotting jots</h5>
@@ -176,7 +176,7 @@
     <div class="w3-container">
       <h5>Map Selection</h5>
       <img src="8717000.jpg" align="center" alt="Imperial Airways Ltd. by Laszlo Moholy-Nagy (1937)" style="width:50%"> <!--the center is not working -->
-      <p>Map selected: Imperial Airways Ltd. by  Laszlo Moholy-Nagy (1937) (Source <a href="https://www.davidrumsey.com/luna/servlet/detail/RUMSEY~8~1~267441~90041892:Imperial-Airways-Map-of-Empire-&-Eu?qvq=q:%3D%22Imperial%20Airways%20Ltd.%22;lc:RUMSEY~8~1&mi=1&trs=6" target="_blank"> David Ramsey Map Collection</a>) but had some reservations over it so looked at others for a backup:
+      <p>Map selected: Imperial Airways Ltd. by Laszlo Moholy-Nagy (1937) (Source <a href="https://www.davidrumsey.com/luna/servlet/detail/RUMSEY~8~1~267441~90041892:Imperial-Airways-Map-of-Empire-&-Eu?qvq=q:%3D%22Imperial%20Airways%20Ltd.%22;lc:RUMSEY~8~1&mi=1&trs=6" target="_blank"> David Ramsey Map Collection</a>) but had some reservations over it so looked at others for a backup:
       	<ul>
       		<li>Imperial Airways [Map of The World]. IA/P/191 20m 5/37 (1937) by James Gardner. Source:<a href="https://www.davidrumsey.com/luna/servlet/detail/RUMSEY~8~1~268350~90042630:Imperial-Airways--Map-of-The-World-" target="_blank"> David Ramsey Map Collection</a></li>
       		<li>Road map of West African</li>
@@ -259,7 +259,7 @@
 	<font size="1">
 		<p>Notes and work from <a href="https://stanfordgeospatialcenter.github.io/undermapped-spaces-2022/" target="_blank">Under-Mapped Spaces: New Methods and Tools for Critical Storytelling</a>, Stanford University. Under-Mapped Spaces 2022 was made possible by generous support from the McCoy Family Foundation, Stanford Libraries, the Stanford Office of the Provost, and Stanford University History Department.</p>
   <p>Copyright © 2022 Nenna Orie Chuku</p>
-  <p>Cookies are used on this website to provide a better user experience. If you would like to disable all cookies on this site and other sites, the most effective way to do this is by disabling all coookies through your browser. To do this, we suggest using the Help or Settings section of your selected browser and following the guide available there. </p>
+  <p>Cookies are used on this website to provide a better user experience. If you would like to disable all cookies on this site and other sites, the most effective way to do this is by disabling all cookies through your browser. To do this, use the Help or Settings section of your selected browser and following the guide available there. </p>
 </p>
 </font>
 </footer>
