--- a/teaching-artefact.html
+++ b/teaching-artefact.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Explorating the theme of under-mapped places">
+	<meta name="description" content="Exploring the theme of under-mapped places">
 	<meta name="keywords" content="mapping, training">
 	<meta name="author" content="Nummo">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -18,37 +18,38 @@
 	<h1>Teaching Artefact</h1>
 	<p> Nenna Orie Chuku </p>
 	<h2>Idea: <b>Fadeouts to Blackouts - how open is the world to you?</b></h2>
-	<p>Sitting in higher education institutions in the UK in dialogues about mobility and mobilities can produce an assumption that by dint of sharing this space, similar approaches and access to national and international movement is shared. This teaching artefact opens a dialogue on the idea of an open world and the openness of the world. The use of maps can present the world, a country, a localised place as open and expansive, yet there are a lot physical and metaphysical boundaries and barriers. These boundaries and barriers are what we will be using to create our own 'Open World Map'.</p>
+	<p>Sitting in higher education institutions in the UK, dialogues about mobility and mobilities can produce an assumption that by sharing this space, similar approaches and access to national and international movement is shared. This teaching artefact seeks to support a dialogue on the idea/concept of an 'open world' and the openness of the world. The use of maps can present the world, a country, a localised place as open and expansive, yet there are multiple physical and metaphysical boundaries and barriers in movement. These boundaries and barriers are what we will be using to create our own 'Open World Map'.</p>
 	<h4>Activities</h4>
 	<ul>
 		<li>Create your <a href="#FOB">Fadeout to Blackout</a> criteria</li>
 		<li>Sketch out your Open World Map: using a Mercator projection map/ sketch of the world using a three- tone key.</li>
 	</ul>
 	<p>Sketching your Open World Map</p>
-		<p>By pencil, pen <em>(question: what boundaries to consider: <a href="http://www.naturalearthdata.com/downloads/10m-cultural-vectors/" target="_blank">www.naturalearthdata.com/downloads/10m-cultural-vectors/</a>?)</em></p>
+	<p><em><font size="3">(Nenna note: development question- what boundaries to consider: <a href="http://www.naturalearthdata.com/downloads/10m-cultural-vectors/" target="_blank">www.naturalearthdata.com/downloads/10m-cultural-vectors/</a>?)</em></font></p>
+		<p>By pencil, pen</p>
 			<ul>
 				<li>Free-shading - using a pencil or black pen - free shade out all of your No places</li>
 				<li>Cross-hatching shading</li>
 				<li>Nothing (white) - leave blank/untouched parts of the world that does moveable to</li>
 			</ul>
-	<p><em>(this entry is an idea)</em> QGIS - similar question to by pencil, pen route: <a href="http://www.naturalearthdata.com/downloads/10m-cultural-vectors/" target="_blank">http://www.naturalearthdata.com/downloads/10m-cultural-vectors/</a></p>
+	<p><em><font size="3">(Nenna note: underdeveloped idea but including here) </em></font>QGIS - similar question to by pencil, pen route:</p>
 				<ul>
 					<li>Locate the 'No' country layer in the 'Layers' panel. Right-click on the selected country layer > Style > click on the black colour (triangle point on the left side of the triangle)</li>
 			<li>Locate the 'Maybe' country level in the 'Layers' panel. Right-click on the selected country layer> Style > pick a colour (not black or white)</li>
 		</li>
 	</ul>
 </ul>
-<h4 id="#FOB">Creating a <em>Fadeout to Blackout</em> criteria</h4>
+<h4 id="FOB">Creating a <em>Fadeout to Blackout</em> criteria</h4>
 <p><u>The 'No'</u></p>
 <p>Your 'No' criteria is be based on what you feel is important. As critical theory is central to this discussion, you may wish to consider intersectional factors. If you wish to adopt an information system based approach, you may wish to consider how visa-free the world is to you and others who you know (family, friend, community).
 </p>
 <p><u>A layered openness</u></p>
 <p>Positioning is a key element of this activity. To thing of ourselves as multi-selves to (in effect) create a character profile. However, not all positions can be comfortably expressed and shared, so with this there are a couple of caveats. Positioning yourself in the 'Open World Map' can come in different ways. One obvious way is to place yourself as centre. Another is to place someone you know as the centre (no government names or real names please). Another is to take a person from the past, a historic figure. Or a fictional character that can be situated within a Mercator projection map. In summary, there are degrees of openness and if you feel that this space is not appropriate for a certain part of yourself - keep and stay firm with that boundary.</p>
 <h4>Duration of session</h4>
-	<p><em>to consider and to add to</em></p>
+	<p><em>(Nenna note: to consider and to add to)</em></p>
 <h4>Dialogue points</h4>
-	<p><em>to consider and to add to</em></p>
-<h4>One approach...</h4>
+	<p><em>(Nenna note: to consider and to add to)</em></p>
+<h4>Stuck? Need a prompt here's one approach...</h4>
 	<p>An idea of an 'Open World Map' could use the concept of visa-free travel:</p>
 		<ul>
 			<li>Consider the passport(s) you hold</li>
@@ -56,7 +57,7 @@
 			<li>Passport(s) your friends have</li>
 		</ul>
 	<p>Passport Index is a website which provides details about visa based on passport held/using:	<a href="https://www.passportindex.org/comparebyPassport.php
-	" target="_blank"> https://www.passportindex.org/comparebyPassport.php </a></p>
+	" target="_blank"> www.passportindex.org/comparebyPassport.php </a></p>
 <h4>Resources and Data Sources</h4>
 <p>Country layers - open sourced and available via:</p>
 	<ul>
@@ -65,9 +66,11 @@
 			<li><a href="https://www.igismap.com/download-world-shapefile-free-country-borders-continents/" target="_blank">www.igismap.com/download-world-shapefile-free-country-borders-continents/</a></li>
 		</ul>
 <h4>Alternative approach and/or extensions</h4>
-	<p>to consider and add to</p>
+	<p><em>(Nenna note: to consider and add to)</em></p>
 	<ul>
 		<li>Going local - same principles but thinking about the local be it the country or city/town.</li>
+		<li>Intersectionality</li>
+		<li>Disability</li>
 	</ul>
 	</div>
 <!-- Footer -->
@@ -75,9 +78,9 @@
 		<font size="1">
 		<p>Notes and work from <a href="https://stanfordgeospatialcenter.github.io/undermapped-spaces-2022/" target="_blank">Under-Mapped Spaces: New Methods and Tools for Critical Storytelling</a>, Stanford University. Under-Mapped Spaces 2022 was made possible by generous support from the McCoy Family Foundation, Stanford Libraries, the Stanford Office of the Provost, and Stanford University History Department.</p>
 	  <p>Copyright © 2022 Nenna Orie Chuku. <a href="https://nummo.github.io/ums/">Part of Scribbles from Under-Mapped Places</a></p>
-	  <p>Cookies are used on this website to provide a better user experience. If you would like to disable all cookies on this site and other sites, the most effective way to do this is by disabling all coookies through your browser. To do this, we suggest using the Help section of your selected browser and following the guide available there. </p>
+	  <p>Cookies are used on this website to provide a better user experience. If you would like to disable all cookies on this site and other sites, the most effective way to do this is by disabling all cookies through your browser. To do this, use the Help section of your selected browser and following the guide available there. </p>
 	</p>
 </font>
-	</footer>
+</footer>
 </body>
 </html>
