disclaimer/note updated

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 	<style>
 	body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+	.disclaimer {margin-left:2%; margin-right: 2%;}
 	</style>
 	<!--Design taken from https://www.w3schools.com/w3css/tryw3css_templates_blog.htm --->
 	<title>Scribbles from Under-Mapped Places</title>
@@ -29,7 +30,7 @@
 
 <!-- Grid -->
 <div class="w3-row">
-	<p>Note: these entries are in note form so if you spot spelling or grammatical errors, this reflects the scribble nature of it. When possible, I will tidy things up.</p>
+	<p class="disclaimer">Note: these entries are in note form so if you spot spelling or grammatical errors, this reflects the scribble nature of it. When possible, I will tidy things up. Also, this page is not optimised for responsive view.</p>
 <!-- Blog entries -->
 <div class="w3-col l8 s12">
   <!-- Blog entry
@@ -53,7 +54,7 @@
   </div>
   <hr>
   --->
-  <!-- Blog entry
+  <!-- Blog entry-->
 
     <div class="w3-card-4 w3-margin w3-white">
     <img src="imperial_small.jpg" alt="airline" style="width:5%">
@@ -63,8 +64,8 @@
     </div>
 
     <div class="w3-container">
-      <h5>Title</h5>
-      <p>notes</p>
+      <h5>Community Mapping, Mapping with Community</h5>
+      <p>What to map? What to map for public view? What not to map at all?</p>
       <div class="w3-row">
         <div class="w3-col m8 s12">
         </div>
@@ -74,7 +75,7 @@
     </div>
   </div>
   <hr>
-    -->
+
   <!-- Blog entry -->
     <div class="w3-card-4 w3-margin w3-white">
     <img src="imperial_small.jpg" alt="airline" style="width:5%">
@@ -203,15 +204,6 @@
 
 <!-- Introduction menu -->
 <div class="w3-col l4">
-  <!-- About Card -->
-  <div class="w3-card w3-margin w3-margin-top">
-  <img src="imperial_small.jpg" style="width:100%">
-    <div class="w3-container w3-white">
-      <h4><b>Nenna</b></h4>
-      <p>Scribbles, jottings and plottings by Nenna (<a href="https://www.ucl.ac.uk/information-studies/nenna-orie-chuku" target="_blank">UCL DIS PhD Candidate </a>) - a participant of the Under-Mapped Spaces 2022 workshop.</p>
-      <p>A note about the image used as the icon - it zoom part of the 'Imperial Airways Map of Empire & European Air Routes' by Laszlo Moholy-Nagy</p>
-    </div>
-  </div><hr>
 
   <!-- Posts -->
   <div class="w3-card w3-margin">
@@ -241,9 +233,26 @@
         <span>Teaching Moment</span>
         <span></span>
       </li>
+			<li class="w3-padding-16">
+				<img src="imperial_small.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+				<span class="w3-large"> <a href="#D4">Scribble, Day 4</a></span><br>
+				<span>Community Mapping, Mapping with Community</span>
+				<span></span>
+			</li>
     </ul>
   </div>
   <hr>
+	<!-- About Card -->
+  <div class="w3-card w3-margin w3-margin-top">
+		<h3>About the jotter</h3>
+	<img src="imperial_small.jpg" style="width:100%">
+    <div class="w3-container w3-white">
+      <h4><b>Nenna</b></h4>
+      <p>Scribbles, jottings and plottings by Nenna (<a href="https://www.ucl.ac.uk/information-studies/nenna-orie-chuku" target="_blank">UCL DIS PhD Candidate </a>) - a participant of the Under-Mapped Spaces 2022 workshop.</p>
+      <p>A note about the image used as the icon - it zoom part of the 'Imperial Airways Map of Empire & European Air Routes' by Laszlo Moholy-Nagy</p>
+    </div>
+  </div><hr>
+
 
 <!-- END Introduction Menu -->
 </div>
